--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
       <id>fabric-maven-proxy</id>
       <name>FMC Maven Proxy</name>
       <!-- Change to your target host -->
-      <url>http://admin:admin@localhost:8107/maven/upload/</url>
+      <url>http://admin:admin@http://ec2-23-20-14-214.compute-1.amazonaws.com:8107/maven/upload/</url>
     </repository>
   </distributionManagement>
 
