--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <karaf-version>2.2.5.fuse-70-${fuse-build-version}</karaf-version>
     <smx-features-version>4.5.0.fuse-70-${fuse-build-version}</smx-features-version>    
     <slf4j-api-version>1.6.1</slf4j-api-version>
+    <deploy-host>ec2-23-22-245-73.compute-1.amazonaws.com</deploy-host>
   </properties>
 
   <modules>
@@ -175,7 +176,7 @@
       <id>fabric-maven-proxy</id>
       <name>FMC Maven Proxy</name>
       <!-- Change to your target host -->
-      <url>http://admin:admin@ec2-107-20-2-81.compute-1.amazonaws.com:8107/maven/upload/</url>
+      <url>http://admin:admin@${deploy-host}:8107/maven/upload/</url>
     </repository>
   </distributionManagement>
 
